session_2/challenge_lab_2/nginx_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: justin-nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
