session_2/challenge_lab_2/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: justin-nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
