session_2/challenge_lab_2/ingress_controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: justin-ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: justin-nginx-service
            port:
              number: 80
