session_2/challenge_lab_2/mongo_np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      db: mongo
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: nginx
    ports:
    - protocol: TCP
      port: 80
